  (Christian Hoffmann)
- Fixed simplexml asXML() not to lose encoding when dumping entire document
  to file. (Ilia)
- Fixed a crash inside PDO when trying instantiate PDORow manually. (Felipe)
- Fixed build failure of ext/mysqli with libmysql 6.0 - missing rpl
  functions. (Andrey)
- Fixed a regression when using strip_tags() and < is within an attribute.
  (Scott)

- Fixed bug #45568 (ISAPI doesn't properly clear auth_digest in header).
  (Patch by: navara at emclient dot com)
- Fixed bug #45556 (Return value from callback isn't freed). (Felipe)
- Fixed bug #45555 (Segfault with invalid non-string as 
  register_introspection_callback). (Christian Seiler)
- Fixed bug #45486 (mb_send_mail(); header 'Content-Type: text/plain; charset=' 
  parsing incorrect). (Felipe)
- Fixed bug #45485 (strip_tags and <?XML tag). (Felipe)
- Fixed bug #45460 (imap patch for fromlength fix in imap_headerinfo doesn't 
  accept lengths of 1024). (Felipe, andrew at lifescale dot com)
- Fixed bug #45449 (filesize() regression using ftp wrapper). 
  (crrodriguez at suse dot de)
- Fixed bug #45423 (fastcgi parent process doesn't invoke php_module_shutdown
  before shutdown) (basant dot kukreja at sun dot com)
- Fixed bug #45352 (Segmentation fault because of tick function on second
  request). (Dmitry)
- Fixed bug #45312 (Segmentation fault on second request for array functions).
  (Dmitry)
- Fixed bug #45251 (double free or corruption with setAttributeNode()). (Rob)
- Fixed bug #45220 (curl_read callback returns -1 when needs to return 
  size_t (unsigned)). (Felipe)
- Fixed bug #45178 (memory corruption on assignment result of "new" by
  reference). (Dmitry)
- Fixed bug #45151 (Crash with URI/file..php (filename contains 2 dots)).
  (Dmitry)
- Fixed bug #45139 (ReflectionProperty returns incorrect declaring class).
  (Felipe)
- Fixed bug #45004 (pg_insert() does not accept 4 digit timezone format).
  (Ilia)
- Fixed bug #44891 Memory leak using registerPHPFunctions and XSLT Variable 